docs/v0.7.0/_sources/gallery/detector/source_detector.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/detector/source_detector.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_detector_source_detector.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_detector_source_detector.py:


Field-history detector trace
============================

Record a point-detector trace while retaining the field history. The example's
single outcome is the detector signal; use ``detector_only.py`` when field
frames are not needed.

.. GENERATED FROM PYTHON SOURCE LINES 11-12

Importing the necessary packages

.. GENERATED FROM PYTHON SOURCE LINES 12-17

.. code-block:: Python

    from TypedUnit import ureg

    from LightWave2D.grid import Grid
    from LightWave2D.experiment import Experiment








.. GENERATED FROM PYTHON SOURCE LINES 18-19

Define the simulation grid

.. GENERATED FROM PYTHON SOURCE LINES 19-29

.. code-block:: Python

    grid = Grid(
        resolution=0.1 * ureg.micrometer,
        size_x=60 * ureg.micrometer,
        size_y=30 * ureg.micrometer,
        n_steps=300,
    )

    # Initialize the experiment with the defined grid
    experiment = Experiment(grid=grid)








.. GENERATED FROM PYTHON SOURCE LINES 30-31

Add a point source to the experiment

.. GENERATED FROM PYTHON SOURCE LINES 31-37

.. code-block:: Python

    source = experiment.add_point_source(
        wavelength=[1310] * ureg.nanometer,
        position=("10%", "50%"),  # Position of the source
        amplitude=10e10,  # Amplitude of the source
    )








.. GENERATED FROM PYTHON SOURCE LINES 38-39

Add a point detector to the experiment

.. GENERATED FROM PYTHON SOURCE LINES 39-43

.. code-block:: Python

    detector = experiment.add_point_detector(
        position=("40%", "50%")  # Position of the detector
    )








.. GENERATED FROM PYTHON SOURCE LINES 44-45

Add a perfectly matched layer (PML) to absorb boundary reflections

.. GENERATED FROM PYTHON SOURCE LINES 45-51

.. code-block:: Python

    experiment.add_pml(
        order=1,  # Order of the PML polynomial profile
        width="10%",  # Width of the PML region as a percentage of grid size
        sigma_max=5000 * (ureg.siemens / ureg.meter),  # Maximum conductivity for the PML
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <LightWave2D.pml.PML object at 0x7f687a932630>



.. GENERATED FROM PYTHON SOURCE LINES 52-53

Retain the field history while acquiring the detector trace.

.. GENERATED FROM PYTHON SOURCE LINES 53-55

.. code-block:: Python

    experiment.run()








.. GENERATED FROM PYTHON SOURCE LINES 56-57

The detector signal is the only result shown on this page.

.. GENERATED FROM PYTHON SOURCE LINES 57-58

.. code-block:: Python

    detector.plot_data()



.. image-sg:: /gallery/detector/images/sphx_glr_source_detector_001.png
   :alt: source detector
   :srcset: /gallery/detector/images/sphx_glr_source_detector_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.661 seconds)


.. _sphx_glr_download_gallery_detector_source_detector.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: source_detector.ipynb <source_detector.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: source_detector.py <source_detector.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: source_detector.zip <source_detector.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
