docs/v0.8.0/_sources/gallery/detector/source_detector.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/detector/source_detector.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_detector_source_detector.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_detector_source_detector.py:


Field-history detector trace
============================

Record a point-detector trace while retaining the field history. The example's
single outcome is the detector signal; use ``detector_only.py`` when field
frames are not needed.

.. GENERATED FROM PYTHON SOURCE LINES 11-12

Importing the necessary packages

.. GENERATED FROM PYTHON SOURCE LINES 12-17

.. code-block:: Python

    from TypedUnit import ureg

    from LightWave2D.grid import Grid
    from LightWave2D.experiment import Experiment








.. GENERATED FROM PYTHON SOURCE LINES 18-19

Define the simulation grid

.. GENERATED FROM PYTHON SOURCE LINES 19-29

.. code-block:: Python

    grid = Grid(
        resolution=0.1 * ureg.micrometer,
        size_x=60 * ureg.micrometer,
        size_y=30 * ureg.micrometer,
        n_steps=300,
    )

    # Initialize the experiment with the defined grid
    experiment = Experiment(grid=grid)








.. GENERATED FROM PYTHON SOURCE LINES 30-31

Add a point source to the experiment

.. GENERATED FROM PYTHON SOURCE LINES 31-37

.. code-block:: Python

    source = experiment.add_point_source(
        wavelength=[1310] * ureg.nanometer,
        position=("10%", "50%"),  # Position of the source
        amplitude=10e10,  # Amplitude of the source
    )








.. GENERATED FROM PYTHON SOURCE LINES 38-39

Add a point detector to the experiment

.. GENERATED FROM PYTHON SOURCE LINES 39-43

.. code-block:: Python

    detector = experiment.add_point_detector(
        position=("40%", "50%")  # Position of the detector
    )








.. GENERATED FROM PYTHON SOURCE LINES 44-45

Add a perfectly matched layer (PML) to absorb boundary reflections

.. GENERATED FROM PYTHON SOURCE LINES 45-51

.. code-block:: Python

    experiment.add_pml(
        order=1,  # Order of the PML polynomial profile
        width="10%",  # Width of the PML region as a percentage of grid size
        sigma_max=5000 * (ureg.siemens / ureg.meter),  # Maximum conductivity for the PML
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <LightWave2D.pml.PML object at 0x7f0e68565070>



.. GENERATED FROM PYTHON SOURCE LINES 52-53

Retain the field history while acquiring the detector trace.

.. GENERATED FROM PYTHON SOURCE LINES 53-55

.. code-block:: Python

    experiment.run()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    SimulationResult(Ez_t=array([[[       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            ...,
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ]],

           [[       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            ...,
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ]],

           [[       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            ...,
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ]],

           ...,

           [[       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            [       0.        ,  3040856.92602821,  5324019.02121121, ...,
              8388508.61895018,  3737760.45311067,        0.        ],
            [       0.        ,  6723759.05098142, 10445662.30337827, ...,
             16623451.49522424,  8016010.81563315,        0.        ],
            ...,
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ]],

           [[       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            [       0.        ,  2410101.09578351,  2099428.57527167, ...,
              6359332.24894074,  3109904.90395171,        0.        ],
            [       0.        ,  3902410.97564628,  3706285.88268957, ...,
             12320221.83068667,  6572204.08995562,        0.        ],
            ...,
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ]],

           [[       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            [       0.        ,   278186.83587819, -1006682.81117064, ...,
              3279681.88690586,  2777604.55750312,        0.        ],
            [       0.        ,   -46765.21973788, -2176042.56576529, ...,
              6008704.88716165,  4487491.98005271,        0.        ],
            ...,
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ],
            [       0.        ,        0.        ,        0.        , ...,
                    0.        ,        0.        ,        0.        ]]],
          shape=(300, 600, 300)), recorded_time_stamp=<Quantity([0.00000000e+00 2.35865434e-16 4.71730867e-16 7.07596301e-16
     9.43461735e-16 1.17932717e-15 1.41519260e-15 1.65105804e-15
     1.88692347e-15 2.12278890e-15 2.35865434e-15 2.59451977e-15
     2.83038520e-15 3.06625064e-15 3.30211607e-15 3.53798151e-15
     3.77384694e-15 4.00971237e-15 4.24557781e-15 4.48144324e-15
     4.71730867e-15 4.95317411e-15 5.18903954e-15 5.42490497e-15
     5.66077041e-15 5.89663584e-15 6.13250128e-15 6.36836671e-15
     6.60423214e-15 6.84009758e-15 7.07596301e-15 7.31182844e-15
     7.54769388e-15 7.78355931e-15 8.01942474e-15 8.25529018e-15
     8.49115561e-15 8.72702105e-15 8.96288648e-15 9.19875191e-15
     9.43461735e-15 9.67048278e-15 9.90634821e-15 1.01422136e-14
     1.03780791e-14 1.06139445e-14 1.08498099e-14 1.10856754e-14
     1.13215408e-14 1.15574063e-14 1.17932717e-14 1.20291371e-14
     1.22650026e-14 1.25008680e-14 1.27367334e-14 1.29725989e-14
     1.32084643e-14 1.34443297e-14 1.36801952e-14 1.39160606e-14
     1.41519260e-14 1.43877915e-14 1.46236569e-14 1.48595223e-14
     1.50953878e-14 1.53312532e-14 1.55671186e-14 1.58029841e-14
     1.60388495e-14 1.62747149e-14 1.65105804e-14 1.67464458e-14
     1.69823112e-14 1.72181767e-14 1.74540421e-14 1.76899075e-14
     1.79257730e-14 1.81616384e-14 1.83975038e-14 1.86333693e-14
     1.88692347e-14 1.91051001e-14 1.93409656e-14 1.95768310e-14
     1.98126964e-14 2.00485619e-14 2.02844273e-14 2.05202927e-14
     2.07561582e-14 2.09920236e-14 2.12278890e-14 2.14637545e-14
     2.16996199e-14 2.19354853e-14 2.21713508e-14 2.24072162e-14
     2.26430816e-14 2.28789471e-14 2.31148125e-14 2.33506779e-14
     2.35865434e-14 2.38224088e-14 2.40582742e-14 2.42941397e-14
     2.45300051e-14 2.47658705e-14 2.50017360e-14 2.52376014e-14
     2.54734668e-14 2.57093323e-14 2.59451977e-14 2.61810631e-14
     2.64169286e-14 2.66527940e-14 2.68886594e-14 2.71245249e-14
     2.73603903e-14 2.75962557e-14 2.78321212e-14 2.80679866e-14
     2.83038520e-14 2.85397175e-14 2.87755829e-14 2.90114483e-14
     2.92473138e-14 2.94831792e-14 2.97190446e-14 2.99549101e-14
     3.01907755e-14 3.04266409e-14 3.06625064e-14 3.08983718e-14
     3.11342372e-14 3.13701027e-14 3.16059681e-14 3.18418335e-14
     3.20776990e-14 3.23135644e-14 3.25494298e-14 3.27852953e-14
     3.30211607e-14 3.32570261e-14 3.34928916e-14 3.37287570e-14
     3.39646224e-14 3.42004879e-14 3.44363533e-14 3.46722188e-14
     3.49080842e-14 3.51439496e-14 3.53798151e-14 3.56156805e-14
     3.58515459e-14 3.60874114e-14 3.63232768e-14 3.65591422e-14
     3.67950077e-14 3.70308731e-14 3.72667385e-14 3.75026040e-14
     3.77384694e-14 3.79743348e-14 3.82102003e-14 3.84460657e-14
     3.86819311e-14 3.89177966e-14 3.91536620e-14 3.93895274e-14
     3.96253929e-14 3.98612583e-14 4.00971237e-14 4.03329892e-14
     4.05688546e-14 4.08047200e-14 4.10405855e-14 4.12764509e-14
     4.15123163e-14 4.17481818e-14 4.19840472e-14 4.22199126e-14
     4.24557781e-14 4.26916435e-14 4.29275089e-14 4.31633744e-14
     4.33992398e-14 4.36351052e-14 4.38709707e-14 4.41068361e-14
     4.43427015e-14 4.45785670e-14 4.48144324e-14 4.50502978e-14
     4.52861633e-14 4.55220287e-14 4.57578941e-14 4.59937596e-14
     4.62296250e-14 4.64654904e-14 4.67013559e-14 4.69372213e-14
     4.71730867e-14 4.74089522e-14 4.76448176e-14 4.78806830e-14
     4.81165485e-14 4.83524139e-14 4.85882793e-14 4.88241448e-14
     4.90600102e-14 4.92958756e-14 4.95317411e-14 4.97676065e-14
     5.00034719e-14 5.02393374e-14 5.04752028e-14 5.07110682e-14
     5.09469337e-14 5.11827991e-14 5.14186645e-14 5.16545300e-14
     5.18903954e-14 5.21262608e-14 5.23621263e-14 5.25979917e-14
     5.28338571e-14 5.30697226e-14 5.33055880e-14 5.35414534e-14
     5.37773189e-14 5.40131843e-14 5.42490497e-14 5.44849152e-14
     5.47207806e-14 5.49566460e-14 5.51925115e-14 5.54283769e-14
     5.56642423e-14 5.59001078e-14 5.61359732e-14 5.63718386e-14
     5.66077041e-14 5.68435695e-14 5.70794349e-14 5.73153004e-14
     5.75511658e-14 5.77870313e-14 5.80228967e-14 5.82587621e-14
     5.84946276e-14 5.87304930e-14 5.89663584e-14 5.92022239e-14
     5.94380893e-14 5.96739547e-14 5.99098202e-14 6.01456856e-14
     6.03815510e-14 6.06174165e-14 6.08532819e-14 6.10891473e-14
     6.13250128e-14 6.15608782e-14 6.17967436e-14 6.20326091e-14
     6.22684745e-14 6.25043399e-14 6.27402054e-14 6.29760708e-14
     6.32119362e-14 6.34478017e-14 6.36836671e-14 6.39195325e-14
     6.41553980e-14 6.43912634e-14 6.46271288e-14 6.48629943e-14
     6.50988597e-14 6.53347251e-14 6.55705906e-14 6.58064560e-14
     6.60423214e-14 6.62781869e-14 6.65140523e-14 6.67499177e-14
     6.69857832e-14 6.72216486e-14 6.74575140e-14 6.76933795e-14
     6.79292449e-14 6.81651103e-14 6.84009758e-14 6.86368412e-14
     6.88727066e-14 6.91085721e-14 6.93444375e-14 6.95803029e-14
     6.98161684e-14 7.00520338e-14 7.02878992e-14 7.05237647e-14], 'second')>, detector_data=array([[ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 0.00000000e+00],
           [ 6.55026731e-44],
           [-4.16865407e-45],
           [ 5.30577957e-40],
           [-3.38232532e-41],
           [ 1.06222201e-36],
           [-6.79002160e-38],
           [ 9.33984529e-34],
           [-5.99321450e-35],
           [ 4.56272199e-31],
           [-2.94237744e-32],
           [ 1.40835887e-28],
           [-9.13794471e-30],
           [ 2.97881202e-26],
           [-1.94698997e-27],
           [ 4.56509259e-24],
           [-3.00953792e-25],
           [ 5.27956853e-22],
           [-3.51514955e-23],
           [ 4.75238868e-20],
           [-3.19993623e-21],
           [ 3.41122294e-18],
           [-2.32615087e-19],
           [ 1.99084521e-16],
           [-1.37691200e-17],
           [ 9.59844839e-15],
           [-6.74348125e-16],
           [ 3.87377417e-13],
           [-2.76910677e-14],
           [ 1.32328356e-11],
           [-9.64110073e-13],
           [ 3.86223368e-10],
           [-2.87322190e-11],
           [ 9.70899719e-09],
           [-7.38921484e-10],
           [ 2.11663862e-07],
           [-1.65140693e-08],
           [ 4.02552195e-06],
           [-3.22674102e-07],
           [ 6.71284949e-05],
           [-5.54119836e-06],
           [ 9.85806903e-04],
           [-8.40123587e-05],
           [ 1.27963967e-02],
           [-1.12897560e-03],
           [ 1.47282391e-01],
           [-1.34924290e-02],
           [ 1.50696145e+00],
           [-1.43815122e-01],
           [ 1.37353363e+01],
           [-1.37047516e+00],
           [ 1.11697344e+02],
           [-1.16988641e+01],
           [ 8.11289919e+02],
           [-8.95969627e+01],
           [ 5.26596555e+03],
           [-6.16327144e+02],
           [ 3.05455620e+04],
           [-3.81072375e+03],
           [ 1.58241558e+05],
           [-2.11837625e+04],
           [ 7.31179396e+05],
           [-1.05856655e+05],
           [ 3.00690955e+06],
           [-4.75171961e+05],
           [ 1.09701386e+07],
           [-1.91357981e+06],
           [ 3.53424244e+07],
           [-6.90006584e+06],
           [ 9.98915978e+07],
           [-2.22153863e+07],
           [ 2.45368435e+08],
           [-6.36159746e+07],
           [ 5.16500469e+08],
           [-1.61170314e+08],
           [ 9.11192190e+08],
           [-3.58611068e+08],
           [ 1.29509998e+09],
           [-6.93517101e+08],
           [ 1.36172858e+09],
           [-1.14772066e+09],
           [ 7.92051535e+08],
           [-1.58496254e+09],
           [-3.40729463e+08],
           [-1.74235484e+09],
           [-1.26939239e+09],
           [-1.35822827e+09],
           [-9.66089637e+08],
           [-4.19068983e+08],
           [ 6.71230721e+08],
           [ 6.82542783e+08],
           [ 2.22012256e+09],
           [ 1.33472255e+09],
           [ 2.10085669e+09],
           [ 1.18041144e+09],
           [ 6.38798849e+08],
           [ 4.07815477e+08],
           [-3.86648135e+08],
           [-4.88233470e+08],
           [-5.20465451e+08],
           [-1.13722847e+09],
           [-1.01761020e+09],
           [-1.35426404e+09],
           [-1.82226812e+09],
           [-9.81616764e+08],
           [-1.20827161e+09],
           [-4.91261904e+07],
           [ 5.28972408e+08],
           [ 9.93892811e+08],
           [ 1.14894261e+09],
           [ 1.59718983e+09],
           [ 7.91656324e+08],
           [ 1.57386500e+09],
           [ 9.66394058e+08],
           [ 9.99864400e+08],
           [ 5.77781399e+08],
           [ 2.70623835e+07],
           [-1.06353122e+09],
           [-9.36647271e+08],
           [-1.69383215e+09],
           [-1.37905690e+09]]), grid=namespace(x_stamp=<Quantity([ 0.   0.1  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9  1.   1.1  1.2  1.3
      1.4  1.5  1.6  1.7  1.8  1.9  2.   2.1  2.2  2.3  2.4  2.5  2.6  2.7
      2.8  2.9  3.   3.1  3.2  3.3  3.4  3.5  3.6  3.7  3.8  3.9  4.   4.1
      4.2  4.3  4.4  4.5  4.6  4.7  4.8  4.9  5.   5.1  5.2  5.3  5.4  5.5
      5.6  5.7  5.8  5.9  6.   6.1  6.2  6.3  6.4  6.5  6.6  6.7  6.8  6.9
      7.   7.1  7.2  7.3  7.4  7.5  7.6  7.7  7.8  7.9  8.   8.1  8.2  8.3
      8.4  8.5  8.6  8.7  8.8  8.9  9.   9.1  9.2  9.3  9.4  9.5  9.6  9.7
      9.8  9.9 10.  10.1 10.2 10.3 10.4 10.5 10.6 10.7 10.8 10.9 11.  11.1
     11.2 11.3 11.4 11.5 11.6 11.7 11.8 11.9 12.  12.1 12.2 12.3 12.4 12.5
     12.6 12.7 12.8 12.9 13.  13.1 13.2 13.3 13.4 13.5 13.6 13.7 13.8 13.9
     14.  14.1 14.2 14.3 14.4 14.5 14.6 14.7 14.8 14.9 15.  15.1 15.2 15.3
     15.4 15.5 15.6 15.7 15.8 15.9 16.  16.1 16.2 16.3 16.4 16.5 16.6 16.7
     16.8 16.9 17.  17.1 17.2 17.3 17.4 17.5 17.6 17.7 17.8 17.9 18.  18.1
     18.2 18.3 18.4 18.5 18.6 18.7 18.8 18.9 19.  19.1 19.2 19.3 19.4 19.5
     19.6 19.7 19.8 19.9 20.  20.1 20.2 20.3 20.4 20.5 20.6 20.7 20.8 20.9
     21.  21.1 21.2 21.3 21.4 21.5 21.6 21.7 21.8 21.9 22.  22.1 22.2 22.3
     22.4 22.5 22.6 22.7 22.8 22.9 23.  23.1 23.2 23.3 23.4 23.5 23.6 23.7
     23.8 23.9 24.  24.1 24.2 24.3 24.4 24.5 24.6 24.7 24.8 24.9 25.  25.1
     25.2 25.3 25.4 25.5 25.6 25.7 25.8 25.9 26.  26.1 26.2 26.3 26.4 26.5
     26.6 26.7 26.8 26.9 27.  27.1 27.2 27.3 27.4 27.5 27.6 27.7 27.8 27.9
     28.  28.1 28.2 28.3 28.4 28.5 28.6 28.7 28.8 28.9 29.  29.1 29.2 29.3
     29.4 29.5 29.6 29.7 29.8 29.9 30.  30.1 30.2 30.3 30.4 30.5 30.6 30.7
     30.8 30.9 31.  31.1 31.2 31.3 31.4 31.5 31.6 31.7 31.8 31.9 32.  32.1
     32.2 32.3 32.4 32.5 32.6 32.7 32.8 32.9 33.  33.1 33.2 33.3 33.4 33.5
     33.6 33.7 33.8 33.9 34.  34.1 34.2 34.3 34.4 34.5 34.6 34.7 34.8 34.9
     35.  35.1 35.2 35.3 35.4 35.5 35.6 35.7 35.8 35.9 36.  36.1 36.2 36.3
     36.4 36.5 36.6 36.7 36.8 36.9 37.  37.1 37.2 37.3 37.4 37.5 37.6 37.7
     37.8 37.9 38.  38.1 38.2 38.3 38.4 38.5 38.6 38.7 38.8 38.9 39.  39.1
     39.2 39.3 39.4 39.5 39.6 39.7 39.8 39.9 40.  40.1 40.2 40.3 40.4 40.5
     40.6 40.7 40.8 40.9 41.  41.1 41.2 41.3 41.4 41.5 41.6 41.7 41.8 41.9
     42.  42.1 42.2 42.3 42.4 42.5 42.6 42.7 42.8 42.9 43.  43.1 43.2 43.3
     43.4 43.5 43.6 43.7 43.8 43.9 44.  44.1 44.2 44.3 44.4 44.5 44.6 44.7
     44.8 44.9 45.  45.1 45.2 45.3 45.4 45.5 45.6 45.7 45.8 45.9 46.  46.1
     46.2 46.3 46.4 46.5 46.6 46.7 46.8 46.9 47.  47.1 47.2 47.3 47.4 47.5
     47.6 47.7 47.8 47.9 48.  48.1 48.2 48.3 48.4 48.5 48.6 48.7 48.8 48.9
     49.  49.1 49.2 49.3 49.4 49.5 49.6 49.7 49.8 49.9 50.  50.1 50.2 50.3
     50.4 50.5 50.6 50.7 50.8 50.9 51.  51.1 51.2 51.3 51.4 51.5 51.6 51.7
     51.8 51.9 52.  52.1 52.2 52.3 52.4 52.5 52.6 52.7 52.8 52.9 53.  53.1
     53.2 53.3 53.4 53.5 53.6 53.7 53.8 53.9 54.  54.1 54.2 54.3 54.4 54.5
     54.6 54.7 54.8 54.9 55.  55.1 55.2 55.3 55.4 55.5 55.6 55.7 55.8 55.9
     56.  56.1 56.2 56.3 56.4 56.5 56.6 56.7 56.8 56.9 57.  57.1 57.2 57.3
     57.4 57.5 57.6 57.7 57.8 57.9 58.  58.1 58.2 58.3 58.4 58.5 58.6 58.7
     58.8 58.9 59.  59.1 59.2 59.3 59.4 59.5 59.6 59.7 59.8 59.9], 'micrometer')>, y_stamp=<Quantity([ 0.   0.1  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9  1.   1.1  1.2  1.3
      1.4  1.5  1.6  1.7  1.8  1.9  2.   2.1  2.2  2.3  2.4  2.5  2.6  2.7
      2.8  2.9  3.   3.1  3.2  3.3  3.4  3.5  3.6  3.7  3.8  3.9  4.   4.1
      4.2  4.3  4.4  4.5  4.6  4.7  4.8  4.9  5.   5.1  5.2  5.3  5.4  5.5
      5.6  5.7  5.8  5.9  6.   6.1  6.2  6.3  6.4  6.5  6.6  6.7  6.8  6.9
      7.   7.1  7.2  7.3  7.4  7.5  7.6  7.7  7.8  7.9  8.   8.1  8.2  8.3
      8.4  8.5  8.6  8.7  8.8  8.9  9.   9.1  9.2  9.3  9.4  9.5  9.6  9.7
      9.8  9.9 10.  10.1 10.2 10.3 10.4 10.5 10.6 10.7 10.8 10.9 11.  11.1
     11.2 11.3 11.4 11.5 11.6 11.7 11.8 11.9 12.  12.1 12.2 12.3 12.4 12.5
     12.6 12.7 12.8 12.9 13.  13.1 13.2 13.3 13.4 13.5 13.6 13.7 13.8 13.9
     14.  14.1 14.2 14.3 14.4 14.5 14.6 14.7 14.8 14.9 15.  15.1 15.2 15.3
     15.4 15.5 15.6 15.7 15.8 15.9 16.  16.1 16.2 16.3 16.4 16.5 16.6 16.7
     16.8 16.9 17.  17.1 17.2 17.3 17.4 17.5 17.6 17.7 17.8 17.9 18.  18.1
     18.2 18.3 18.4 18.5 18.6 18.7 18.8 18.9 19.  19.1 19.2 19.3 19.4 19.5
     19.6 19.7 19.8 19.9 20.  20.1 20.2 20.3 20.4 20.5 20.6 20.7 20.8 20.9
     21.  21.1 21.2 21.3 21.4 21.5 21.6 21.7 21.8 21.9 22.  22.1 22.2 22.3
     22.4 22.5 22.6 22.7 22.8 22.9 23.  23.1 23.2 23.3 23.4 23.5 23.6 23.7
     23.8 23.9 24.  24.1 24.2 24.3 24.4 24.5 24.6 24.7 24.8 24.9 25.  25.1
     25.2 25.3 25.4 25.5 25.6 25.7 25.8 25.9 26.  26.1 26.2 26.3 26.4 26.5
     26.6 26.7 26.8 26.9 27.  27.1 27.2 27.3 27.4 27.5 27.6 27.7 27.8 27.9
     28.  28.1 28.2 28.3 28.4 28.5 28.6 28.7 28.8 28.9 29.  29.1 29.2 29.3
     29.4 29.5 29.6 29.7 29.8 29.9], 'micrometer')>), components=(), sources=(<LightWave2D.source.PointWaveSource object at 0x7f0e67502470>,), detectors=(<LightWave2D.detector.PointDetector object at 0x7f0e68565a70>,), detector_time_stamp=<Quantity([0.00000000e+00 2.35865434e-16 4.71730867e-16 7.07596301e-16
     9.43461735e-16 1.17932717e-15 1.41519260e-15 1.65105804e-15
     1.88692347e-15 2.12278890e-15 2.35865434e-15 2.59451977e-15
     2.83038520e-15 3.06625064e-15 3.30211607e-15 3.53798151e-15
     3.77384694e-15 4.00971237e-15 4.24557781e-15 4.48144324e-15
     4.71730867e-15 4.95317411e-15 5.18903954e-15 5.42490497e-15
     5.66077041e-15 5.89663584e-15 6.13250128e-15 6.36836671e-15
     6.60423214e-15 6.84009758e-15 7.07596301e-15 7.31182844e-15
     7.54769388e-15 7.78355931e-15 8.01942474e-15 8.25529018e-15
     8.49115561e-15 8.72702105e-15 8.96288648e-15 9.19875191e-15
     9.43461735e-15 9.67048278e-15 9.90634821e-15 1.01422136e-14
     1.03780791e-14 1.06139445e-14 1.08498099e-14 1.10856754e-14
     1.13215408e-14 1.15574063e-14 1.17932717e-14 1.20291371e-14
     1.22650026e-14 1.25008680e-14 1.27367334e-14 1.29725989e-14
     1.32084643e-14 1.34443297e-14 1.36801952e-14 1.39160606e-14
     1.41519260e-14 1.43877915e-14 1.46236569e-14 1.48595223e-14
     1.50953878e-14 1.53312532e-14 1.55671186e-14 1.58029841e-14
     1.60388495e-14 1.62747149e-14 1.65105804e-14 1.67464458e-14
     1.69823112e-14 1.72181767e-14 1.74540421e-14 1.76899075e-14
     1.79257730e-14 1.81616384e-14 1.83975038e-14 1.86333693e-14
     1.88692347e-14 1.91051001e-14 1.93409656e-14 1.95768310e-14
     1.98126964e-14 2.00485619e-14 2.02844273e-14 2.05202927e-14
     2.07561582e-14 2.09920236e-14 2.12278890e-14 2.14637545e-14
     2.16996199e-14 2.19354853e-14 2.21713508e-14 2.24072162e-14
     2.26430816e-14 2.28789471e-14 2.31148125e-14 2.33506779e-14
     2.35865434e-14 2.38224088e-14 2.40582742e-14 2.42941397e-14
     2.45300051e-14 2.47658705e-14 2.50017360e-14 2.52376014e-14
     2.54734668e-14 2.57093323e-14 2.59451977e-14 2.61810631e-14
     2.64169286e-14 2.66527940e-14 2.68886594e-14 2.71245249e-14
     2.73603903e-14 2.75962557e-14 2.78321212e-14 2.80679866e-14
     2.83038520e-14 2.85397175e-14 2.87755829e-14 2.90114483e-14
     2.92473138e-14 2.94831792e-14 2.97190446e-14 2.99549101e-14
     3.01907755e-14 3.04266409e-14 3.06625064e-14 3.08983718e-14
     3.11342372e-14 3.13701027e-14 3.16059681e-14 3.18418335e-14
     3.20776990e-14 3.23135644e-14 3.25494298e-14 3.27852953e-14
     3.30211607e-14 3.32570261e-14 3.34928916e-14 3.37287570e-14
     3.39646224e-14 3.42004879e-14 3.44363533e-14 3.46722188e-14
     3.49080842e-14 3.51439496e-14 3.53798151e-14 3.56156805e-14
     3.58515459e-14 3.60874114e-14 3.63232768e-14 3.65591422e-14
     3.67950077e-14 3.70308731e-14 3.72667385e-14 3.75026040e-14
     3.77384694e-14 3.79743348e-14 3.82102003e-14 3.84460657e-14
     3.86819311e-14 3.89177966e-14 3.91536620e-14 3.93895274e-14
     3.96253929e-14 3.98612583e-14 4.00971237e-14 4.03329892e-14
     4.05688546e-14 4.08047200e-14 4.10405855e-14 4.12764509e-14
     4.15123163e-14 4.17481818e-14 4.19840472e-14 4.22199126e-14
     4.24557781e-14 4.26916435e-14 4.29275089e-14 4.31633744e-14
     4.33992398e-14 4.36351052e-14 4.38709707e-14 4.41068361e-14
     4.43427015e-14 4.45785670e-14 4.48144324e-14 4.50502978e-14
     4.52861633e-14 4.55220287e-14 4.57578941e-14 4.59937596e-14
     4.62296250e-14 4.64654904e-14 4.67013559e-14 4.69372213e-14
     4.71730867e-14 4.74089522e-14 4.76448176e-14 4.78806830e-14
     4.81165485e-14 4.83524139e-14 4.85882793e-14 4.88241448e-14
     4.90600102e-14 4.92958756e-14 4.95317411e-14 4.97676065e-14
     5.00034719e-14 5.02393374e-14 5.04752028e-14 5.07110682e-14
     5.09469337e-14 5.11827991e-14 5.14186645e-14 5.16545300e-14
     5.18903954e-14 5.21262608e-14 5.23621263e-14 5.25979917e-14
     5.28338571e-14 5.30697226e-14 5.33055880e-14 5.35414534e-14
     5.37773189e-14 5.40131843e-14 5.42490497e-14 5.44849152e-14
     5.47207806e-14 5.49566460e-14 5.51925115e-14 5.54283769e-14
     5.56642423e-14 5.59001078e-14 5.61359732e-14 5.63718386e-14
     5.66077041e-14 5.68435695e-14 5.70794349e-14 5.73153004e-14
     5.75511658e-14 5.77870313e-14 5.80228967e-14 5.82587621e-14
     5.84946276e-14 5.87304930e-14 5.89663584e-14 5.92022239e-14
     5.94380893e-14 5.96739547e-14 5.99098202e-14 6.01456856e-14
     6.03815510e-14 6.06174165e-14 6.08532819e-14 6.10891473e-14
     6.13250128e-14 6.15608782e-14 6.17967436e-14 6.20326091e-14
     6.22684745e-14 6.25043399e-14 6.27402054e-14 6.29760708e-14
     6.32119362e-14 6.34478017e-14 6.36836671e-14 6.39195325e-14
     6.41553980e-14 6.43912634e-14 6.46271288e-14 6.48629943e-14
     6.50988597e-14 6.53347251e-14 6.55705906e-14 6.58064560e-14
     6.60423214e-14 6.62781869e-14 6.65140523e-14 6.67499177e-14
     6.69857832e-14 6.72216486e-14 6.74575140e-14 6.76933795e-14
     6.79292449e-14 6.81651103e-14 6.84009758e-14 6.86368412e-14
     6.88727066e-14 6.91085721e-14 6.93444375e-14 6.95803029e-14
     6.98161684e-14 7.00520338e-14 7.02878992e-14 7.05237647e-14], 'second')>, flux=(), field_path=None)



.. GENERATED FROM PYTHON SOURCE LINES 56-57

The detector signal is the only result shown on this page.

.. GENERATED FROM PYTHON SOURCE LINES 57-58

.. code-block:: Python

    detector.plot_data()



.. image-sg:: /gallery/detector/images/sphx_glr_source_detector_001.png
   :alt: source detector
   :srcset: /gallery/detector/images/sphx_glr_source_detector_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.481 seconds)


.. _sphx_glr_download_gallery_detector_source_detector.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: source_detector.ipynb <source_detector.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: source_detector.py <source_detector.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: source_detector.zip <source_detector.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
